Changelog
=========

1.0dev (Unreleased)
-------------------

- Updated danish translations.
  [tmog]

- Add better status message when unsubscribing from all channels
  on "single subscribe form".
  [tmog]

- Key-fields, such as "E-mail address" is now disabled on "single
  form subscription page" when viewing an existing subscription.
  This was misleading anyway, since they could not really be changed. 
  [tmog]

- Fix #924124: When using "single form subscription page"
  User email no longer leaks into the default text of "E-mail address"
  in subscribe.html for all sessions after user manages subscription.
  [tmog]

- Fix test breakage with newer versions of zope.testbrowser
  Tested on zope.testbrowser 3.10-3.11.1
  zope.testbrowser-3.11.1 will be pinned in the test buildout
  for now.
  [tmog]

0.9.10 (2012-02-25)
-------------------

- Fix #363127: persistent utilities will no longer destroy site after
  an uninstall of S&D.
  [nouri]

- remove deprecation warning on plone4.1
  [toutpt]

0.9.9 (2011-07-22)
------------------

- Work around incompatibility with plone.app.z3cform's base template, by
  changing the request in our own `switch_on` function and removing the more
  specialized `IPloneFormLayer`, thus falling back on the layer from
  `plone.z3cform` and its base template.
  Closes https://bugs.launchpad.net/singing-dancing/+bug/697348.
  [hannosch]

0.9.8 (2011-07-21)
------------------

- Replace several untranslatable strings.
  [pfurman]

- Fixed compatibility with Plone 4.1 by (conditionally) loading the
  permissions.zcml from CMFCore.  (Still works on Plone 3.3 and 4.0
  too.)
  [maurits]

- Link to new manual.
  [nouri]

0.9.7 (2011-02-23)
------------------

- Support acquisition-wrapped channel; the possible wrapping of the
  channel object is particularly important with subscriptions since
  the ``five.intid`` utility is used to track them and has delicate
  code to avoid acquisition "loops".
  [malthe]
